--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <footer>
-        <p>Made with ❄️ for the Winter Break Planning</p>
+        <p>Created for the 2024 December Boba Drops Hackathon Challenge</p>
       </footer>
     </div>
     <script src="/main.js"></script>
